fixes to css image file link

--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -169,7 +169,7 @@ footer {
 }
 
 .login-register{
-    background-image: url('/final/public/images/Map.png'); 
+    background-image: url('./images/Map.png'); 
     background-size: cover;  
     background-position: center; 
     background-repeat: no-repeat;
