--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -19,18 +19,18 @@
                     <li class="nav-item">
                         <a class="nav-link <%= page === 'map' ? 'active' : '' %>" href="/">Map</a>
                     </li>
-    
+
+                    <li class="nav-item">
+                        <a class="nav-link <%= page === 'settings' ? 'active' : '' %>" href="/settings">Settings</a>
+                    </li>
+
                     <!-- login dropdown -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-user"></i> 
                         </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">  
-                            <li><a class="dropdown-item" href="/settings">Settings</a></li>
-                            <!--<li><a class="dropdown-item" href="favorites.html">Favorites</a></li>-->
-                            <!-- <li><button class="dropdown-item" id="easterEggButton">Buses</button></li> -->
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="/login">Login/Sign Out</a></li>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown"> 
+                            <li><a class="dropdown-item" href="/login">Login</a></li>
                         </ul>
                     </li>
                 </ul>
