testing log out very simply

--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -120,7 +120,7 @@
                             </button>
                         </div>
                         <div id="logoutForm" class="mt-3" style="display: none;">
-                            <form method= "POST" action="/logout">
+                            <form method= "POST" action="settings/logout">
                                 <div class="form-group">
                                     <!--Show the details of the account currently logged in including name and email-->
                                     <h3>Current Details</h1>
