--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -170,7 +170,7 @@
                             </button>
                         </div>
                         <div id="passwordForm" class="mt-3" style="display: none;">
-                            <form>
+                            <form method = "POST" action="settings/changepassword">
                                 <div class="form-group">
                                     <label for="newpassword">New Password</label>
                                     <input type="text" id="newpassword" class="form-control" placeholder="Enter new password" />
@@ -192,10 +192,10 @@
                             </button>
                         </div>
                         <div id="deleteAccountForm" class="mt-3" style="display: none;">
-                            <form>
+                            <form method = "POST" action="settings/deleteaccount">
                                 <div class="form-group">
                                     <label for="confirmDelete">Type "DELETE" to confirm</label>
-                                    <input type="text" id="confirmDelete" class="form-control" placeholder="DELETE" />
+                                    <input type="text" id="confirmDelete" class="form-control" placeholder="DELETE" name="deletetext" />
                                 </div>
                                 <button type="submit" class="btn btn-danger">Delete Account</button>
                             </form>
