--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -19,11 +19,8 @@
                     <li class="nav-item">
                         <a class="nav-link <%= page === 'map' ? 'active' : '' %>" href="/">Map</a>
                     </li>
-                    <!--<li class="nav-item">
-                        <a class="nav-link <%= page === 'timetable' ? 'active' : '' %>" href="/timetable">Timetables</a>
-                    </li>-->
-                    <li onclick="alert('This feature is coming soon! Edited')" class="nav-item">
-                        <a class="nav-link <%= page === 'plantrip' ? 'active' : '' %>" href="#">Plan Trip</a>
+                    <li class="nav-item">
+                        <a id="settingshider" class="nav-link <%= page === 'settings' ? 'active' : '' %>"style="display: none;" href="/settings">Map</a>
                     </li>
     
                     <!-- login dropdown -->
@@ -32,10 +29,6 @@
                             <i class="fa-solid fa-user"></i> 
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">  
-                            <li><a id="settingshider" class="dropdown-item" href="/settings" style="display: none;">Settings</a></li>
-                            <!--<li><a class="dropdown-item" href="favorites.html">Favorites</a></li>-->
-                            <!-- <li><button class="dropdown-item" id="easterEggButton">Buses</button></li> -->
-                            <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="/login">Login/Sign Out</a></li>
                         </ul>
                     </li>
@@ -47,7 +40,7 @@
 
 
 <script>
-      
+
     document.addEventListener("DOMContentLoaded", function () {
         const isLoggedIn = <%= loggedIn? 'true' : 'false' %>;
         if (isLoggedIn === true || isLoggedIn === "true"){
