--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -20,7 +20,7 @@
                         <a class="nav-link <%= page === 'map' ? 'active' : '' %>" href="/">Map</a>
                     </li>
                     <li class="nav-item">
-                        <a id="settingshider" class="nav-link <%= page === 'settings' ? 'active' : '' %>"style="display: none;" href="/settings">Map</a>
+                        <a id="settingshider" class="nav-link <%= page === 'settings' ? 'active' : '' %>"style="display: none;" href="/settings">Setings</a>
                     </li>
     
                     <!-- login dropdown -->
