changed setings to settings

--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <%- include("../partials/head") %>
-    <script src="/js/setings.js"></script>
+    <script src="/js/settings.js"></script>
 </head>
 
 <body>
