--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -651,6 +651,7 @@ button.btn-link.number:hover {
 
 .form-error {
     color: red;
+    font-weight: bold;
     margin-top: 15px;
     font-size: 40px;
 }
