--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -649,7 +649,7 @@ button.btn-link.number:hover {
     }
 }
 
-.form-error {
+.error-message {
     color: red;
     font-weight: bold;
     margin-top: 15px;
