--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -26,7 +26,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div>
                                     <strong class="mb-0">Change Map Zoom</strong>
-                                    <p class="text-muted mb-0">Select a map zoom level (5 - 15).</p>
+                                    <p class="text-muted mb-0">Select your default map zoom.</p>
                                 </div>
                                 <button class="btn btn-light" data-toggle-section="mapZoomForm">
                                     <i class="fas fa-chevron-down"></i>
@@ -35,12 +35,15 @@
                             <div id="mapZoomForm" class="mt-3" style="display: none;">
                                 <form id="zoomSettingsForm">
                                     <div class="form-group mb-3">
-                                        <label for="mapZoomRange">Map Zoom Level: <span id="zoomValue">10</span></label>
-                                        <input type="range" class="form-range" min="5" max="15" id="mapZoomRange" value="10">
+                                        <label for="mapZoomRange" class="d-flex justify-content-between">
+                                            <span>Zoom Out</span>
+                                            <span>Zoom In</span>
+                                        </label>
+                                        <input type="range" class="form-range" min="5" max="17" id="mapZoomRange" value="10">
                                     </div>
                                     <button type="submit" class="btn btn-primary">Save</button>
                                 </form>
-                            </div>
+                            </div>                            
                         </div>
 
                         <!-- Default Location -->
