added <p> tags to error

--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -156,7 +156,7 @@
                                     <label for="confirmDelete">Type "DELETE" to confirm</label>
                                     <input type="text" id="confirmDelete" class="form-control" placeholder="DELETE" name="deletetext" />
                                     <%if(error){ %>
-                                        <div class="error-message"><%= error %></div>
+                                        <div class="error-message"><p><%= error %></p></div>
                                     <% } %>
 
                                 </div>
