--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -155,7 +155,7 @@
                                 <div class="form-group">
                                     <label for="confirmDelete">Type "DELETE" to confirm</label>
                                     <input type="text" id="confirmDelete" class="form-control" placeholder="DELETE" name="deletetext" />
-                                    <%if(error !== "undefined"){ %>
+                                    <%if(error){ %>
                                         <div class="error-message"><p><%= error %></p></div>
                                     <% } %>
 
