--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -39,7 +39,7 @@
                                             <span>Zoom Out</span>
                                             <span>Zoom In</span>
                                         </label>
-                                        <input type="range" class="form-range" min="5" max="17" id="mapZoomRange" value="10">
+                                        <input type="range" class="form-range" min="5" max="17" id="mapZoomRange">
                                     </div>
                                     <button type="submit" class="btn btn-primary">Save</button>
                                 </form>
