--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -23,15 +23,19 @@
                     <li class="nav-item">
                         <a class="nav-link <%= page === 'settings' ? 'active' : '' %>" href="/settings">Settings</a>
                     </li>
-                    <% } %>
+                    
     
                     <!-- login dropdown -->
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="fa-solid fa-user"></i> 
                         </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">  
-                            <li><a class="dropdown-item" href="/login">Login/Sign Out</a></li>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown"> 
+                            <% if (!loggedIn) { %>
+                                <li><a class="dropdown-item" href="/login">Login</a></li>
+                            <% } else { %>
+                                <li><a class="dropdown-item" href="/signOut">Sign Out</a></li>
+                            <% } %>
                         </ul>
                     </li>
                 </ul>
