--- a/final/views/partials/header.ejs
+++ b/final/views/partials/header.ejs
@@ -35,7 +35,7 @@
                             <% if (!loggedIn) { %>
                                 <li><a class="dropdown-item" href="/login">Login</a></li>
                             <% } else { %>
-                                <li><a class="dropdown-item" href="setings/logout">Sign Out</a></li>
+                                <li><a class="dropdown-item" href="/settings/logout">Sign Out</a></li>
                             <% } %>
                         </ul>
                     </li>
