--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -169,7 +169,8 @@ footer {
 }
 
 .login-register{
-    background-image: url('./images/Map.png'); 
+    background-image: url("../images/Busmap.png");
+    background-color: #f0f0f0; 
     background-size: cover;  
     background-position: center; 
     background-repeat: no-repeat;
