--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -174,7 +174,7 @@ footer {
     background-size: cover;  
     background-position: center; 
     background-repeat: no-repeat;
-    height: 80vh;
+    height: auto;
 }
 
 
