--- a/final/views/pages/login.ejs
+++ b/final/views/pages/login.ejs
@@ -5,7 +5,7 @@
     <%- include("../partials/head") %>
 </head>
 
-<body>
+<body id="login-page">
     <header>
         <%- include("../partials/header") %>
     </header>
