changed id to class

--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -463,7 +463,7 @@ button.btn-link.number:hover {
     }
 
     /* LOGIN PAGE CSS */
-    #login-page {
+    .login-page {
         overflow: hidden;
     }
 
