--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -463,9 +463,9 @@ button.btn-link.number:hover {
     }
 
     /* LOGIN PAGE CSS */
-    .login-page {
+    /* .login-page {
         overflow: hidden;
-    }
+    } */
 
     #login-section {
         width: 30vw;
