Add favicon and only import map js on map page

--- a/final/views/pages/index.ejs
+++ b/final/views/pages/index.ejs
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <%- include("../partials/head") %>
+    <script type="module" src="/js/map.js"></script>
 </head>
 <body class="index-page">
     <header>
