changed form type to password

--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -101,13 +101,13 @@
                                 <form method="POST" action="/settings/changepassword">
                                     <div class="form-group">
                                         <label for="oldpass">Enter Old Password</label>
-                                        <input type="text" id="oldpass" class="form-control" placeholder="Enter your old password" name="oldpassword" />
+                                        <input type="password" id="oldpass" class="form-control" placeholder="Enter your old password" name="oldpassword" />
                                         
                                         <label for="newpassword">New Password</label>
-                                        <input type="text" id="newpassword" class="form-control" placeholder="Enter new password" name="newpassword" />
+                                        <input type="password" id="newpassword" class="form-control" placeholder="Enter new password" name="newpassword" />
                                         
                                         <label for="confirmpass">Confirm New Password</label>
-                                        <input type="text" id="confirmpass" class="form-control" placeholder="Confirm new password" name="confirmpassword"/>
+                                        <input type="password" id="confirmpass" class="form-control" placeholder="Confirm new password" name="confirmpassword"/>
                                     </div>
                                     <button type="submit" class="btn btn-primary">Save</button>
                                 </form>
