--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -100,7 +100,7 @@
                             <div id="passwordForm" class="mt-3" style="display: none;">
                                 <form method="POST" action="/settings/changepassword">
                                     <div class="form-group">
-                                        <label class="mt-2" for="oldpass">Enter Old Password</label>
+                                        <label for="oldpass">Enter Old Password</label>
                                         <input type="password" id="oldpass" class="form-control mt-2" placeholder="Enter your old password" name="oldpassword" />
                                         
                                         <label class="mt-2" for="newpassword">New Password</label>
