Fix grammar on login page

--- a/final/views/pages/login.ejs
+++ b/final/views/pages/login.ejs
@@ -21,7 +21,7 @@
                     <% } %>
 
                     <a href="#"><button id="login-button" type="submit">Submit</button></a>
-                    <p>Dont Have An Account Create One <a href="/create">Here</a></p>
+                    <p><a href="/create">Don't have an account? Create one!</a></p>
                 </form>
             </div>
         </div>
