added settings to set units

--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -44,6 +44,22 @@
                                 </form>
                             </div>                            
                         </div>
+                        <div class="list-group-item">
+                            <div class="row align-items-center">
+                                <div class="col">
+                                    <strong class="mb-0">Distance Units</strong>
+                                    <p class="text-muted mb-0">Please select prefered units of Distance</p>
+                                </div>
+                                <div class="col-auto">
+                                    <div class="col-auto">
+                                        <select id="distanceUnits" class="form-select">
+                                            <option value="km">Kilometers</option>
+                                            <option value="miles">Miles</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Account Manager -->
