Changed the css for the 404 page to make the image bigger as well as removing a check from the ejs page

--- a/final/public/css/styles.css
+++ b/final/public/css/styles.css
@@ -373,8 +373,9 @@ footer p {
 }
 
 #logo-404 {
-    width: 180px;
+    width: 300px;;
     margin-bottom: 2rem;
+
 }
 
 /* =-=-=-= REFRESH BUTTON =-=-=-= */
