fixed text decoration on login and create page

--- a/final/views/pages/create.ejs
+++ b/final/views/pages/create.ejs
@@ -22,7 +22,7 @@
                     <% } %>
 
                     <button id="login-button" type="submit">Create</button>
-                    <p><a href="/login">Already have an account? Log in!</a></p>
+                    <p>Already have an account? <a style="text-decoration: none;"href="/login">Log in!</a></p>
                 </form>
             </div>
         </div>
