--- a/final/views/pages/login.ejs
+++ b/final/views/pages/login.ejs
@@ -20,7 +20,7 @@
                     <% } %>
 
                     <button id="login-button" type="submit">Submit</button>
-                    <p><a href="/create">Don't have an account? Create one!</a></p>
+                    <p>Don't have an account? <a style="text-decoration: none;"href="/create">Create one!</a></p>
                 </form>
             </div>
         </div>
