--- a/final/views/pages/settings.ejs
+++ b/final/views/pages/settings.ejs
@@ -18,7 +18,7 @@
                     <!-- Map Settings -->
                     <div class="mb-5">
                         <strong class="mb-1 d-block fs-4">Map Settings</strong>
-                        <p class="text-muted">Here you can manage your default map settings</p>
+                        <p class="text-muted">Here you can manage your default map settings.</p>
 
                         <div class="list-group shadow">
                             <!-- Map Zoom -->
@@ -70,7 +70,7 @@
                     <hr class="my-5" />
                     <div class="mb-5">
                         <strong class="mb-1 d-block fs-4">Account Manager</strong>
-                        <p class="text-muted">Here you can manage your account details</p>
+                        <p class="text-muted">Here you can manage your account details.</p>
 
                         <div class="list-group shadow">
                             <!-- Log Out -->
